feat: 重构网页版为HYDRATE MOVE风格
- 移除中间的日期时间显示区域，简化界面
- 应用HYDRATE MOVE配色方案：紫色渐变背景，橙色/蓝色按钮
- 采用玻璃拟态设计：半透明卡片，毛玻璃效果
- 增强交互体验：悬停动画，按钮光泽效果
- 优化响应式设计：移动端和桌面端适配
- 保持核心打卡功能不变，专注用户体验

技术改动：
- 更新HTML结构，移除时间显示组件
- 重写CSS样式，应用新的设计系统
- 优化JavaScript逻辑，简化时间处理
- 添加测试页面验证功能完整性

--- a/public/index.html
+++ b/public/index.html
@@ -27,12 +27,8 @@
 
         <!-- 主要内容区域 -->
         <main class="main-content">
-            <!-- 时间显示区域 -->
-            <section class="card">
-                <div class="time-date-display">
-                    <div class="current-time" id="currentTime">--:--:--</div>
-                    <div class="current-date" id="currentDate">2025/8/13</div>
-                </div>
+            <!-- 主操作区域 -->
+            <section class="card main-action-card">
                 <button id="clockInBtn" class="btn-primary">
                     开始工作
                 </button>
