--- a/public/deployment-verification.html
+++ b/public/deployment-verification.html
@@ -40,8 +40,11 @@
 <body>
     <div class="container">
         <div class="success-icon">✅</div>
-        <div class="status">Gitee Go 自动部署成功！</div>
+        <div class="status">缓存清除部署成功！</div>
         <div class="timestamp">部署时间：<span id="timestamp"></span></div>
+        <div style="margin-top: 1rem; font-size: 0.9rem; opacity: 0.7;">
+            缓存清除时间：2025-01-17 14:30:00
+        </div>
     </div>
     <script>
         document.getElementById('timestamp').textContent = new Date().toLocaleString('zh-CN');
