refactor: Remove unnecessary test files and dependencies
- Delete entire tests/ directory (over-engineering for simple app)
- Remove tsconfig.json (no longer needed without TypeScript tests)
- Clean up package.json: remove test scripts and dev dependencies
- Add practical scripts: dev server and deploy command
- Simplify dependencies: remove testing frameworks and TypeScript tools

Project is now leaner and focused on core functionality.

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,17 @@
     <link rel="icon" type="image/png" sizes="192x192" href="assets/icons/icon-192x192.png">
     <link rel="apple-touch-icon" href="assets/icons/icon-192x192.png">
     
+    <!-- 百度统计 -->
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?85b63e0bb35971c76646a4218fe270f8";
+            var s = document.getElementsByTagName("script")[0]; 
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
+    
     <!-- CSS样式 -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/mobile.css" media="(max-width: 768px)">
