--- a/design-preview.html
+++ b/design-preview.html
@@ -60,18 +60,25 @@
             gap: 24px;
         }
 
-        .header {
-            background: #2563eb;
-            color: white;
-            padding: 16px 24px;
-            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+        .page-header {
+            text-align: center;
+            padding: 32px 24px;
+            background: var(--bg);
         }
 
-        .title {
-            font-size: 24px;
+        .page-title {
+            font-size: 32px;
             font-weight: 700;
-            color: white;
+            color: var(--text);
+            margin: 0 0 8px 0;
+            letter-spacing: -0.5px;
+        }
+
+        .page-subtitle {
+            font-size: 16px;
+            color: var(--text-light);
             margin: 0;
+            font-weight: 400;
         }
 
         /* 工时记录卡片 */
@@ -276,18 +283,20 @@
         }
 
         .stat-item {
-            background: #faf5ff;
-            border-radius: 8px;
-            padding: 16px;
-            border: 1px solid #e9d5ff;
+            background: var(--surface);
+            border-radius: var(--radius);
+            padding: 20px;
+            border: 1px solid var(--border);
             transition: var(--transition);
             display: flex;
             align-items: center;
-            gap: 12px;
+            justify-content: center;
+            text-align: center;
         }
 
         .stat-item:hover {
-            background: #f3e8ff;
+            background: var(--surface-hover);
+            box-shadow: var(--shadow);
         }
 
         .stat-content {
@@ -296,15 +305,17 @@
 
         .stat-label {
             font-size: 14px;
-            color: #7c3aed;
+            color: var(--text-light);
             font-weight: 500;
-            margin-bottom: 4px;
+            margin-bottom: 8px;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
         }
 
         .stat-value {
-            font-size: 20px;
+            font-size: 24px;
             font-weight: 700;
-            color: #7c3aed;
+            color: var(--text);
             font-family: ui-monospace, 'SF Mono', 'Monaco', 'Cascadia Code', monospace;
         }
 
@@ -356,17 +367,17 @@
         }
 
         .period-stat.weekly {
-            background: #eff6ff;
+            background: var(--surface-hover);
             padding: 16px;
-            border-radius: 8px;
-            border: 1px solid #dbeafe;
+            border-radius: var(--radius-sm);
+            border: 1px solid var(--border);
         }
 
         .period-stat.daily-avg {
-            background: #f0fdf4;
+            background: var(--surface-hover);
             padding: 16px;
-            border-radius: 8px;
-            border: 1px solid #dcfce7;
+            border-radius: var(--radius-sm);
+            border: 1px solid var(--border);
         }
 
         .period-info {
@@ -380,11 +391,11 @@
         }
 
         .period-stat.weekly .period-label {
-            color: #1d4ed8;
+            color: var(--text-light);
         }
 
         .period-stat.daily-avg .period-label {
-            color: #16a34a;
+            color: var(--text-light);
         }
 
         .period-value {
@@ -394,11 +405,11 @@
         }
 
         .period-stat.weekly .period-value {
-            color: #1d4ed8;
+            color: var(--text);
         }
 
         .period-stat.daily-avg .period-value {
-            color: #16a34a;
+            color: var(--text);
         }
 
         /* 数据管理 */
@@ -552,10 +563,11 @@
 
 <body>
     <div id="app">
-        <!-- 页面标题 -->
-        <header class="header">
-            <h1 class="title">工时卫士</h1>
-        </header>
+        <!-- 页面标题 - 简洁版本 -->
+        <div class="page-header">
+            <h1 class="page-title">工时卫士</h1>
+            <p class="page-subtitle">简洁高效的工时记录工具</p>
+        </div>
 
         <!-- 主要内容区域 -->
         <main class="main-content">
@@ -592,35 +604,18 @@
                     </div>
                     <div class="stats-grid">
                         <div class="stat-item monthly">
-                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#7c3aed"
-                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <circle cx="12" cy="12" r="10"></circle>
-                                <polyline points="12 6 12 12 16 14"></polyline>
-                            </svg>
                             <div class="stat-content">
                                 <div class="stat-label">月累计工时</div>
                                 <div class="stat-value">9小时12分钟</div>
                             </div>
                         </div>
                         <div class="stat-item daily">
-                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#7c3aed"
-                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <polyline points="22 7 13.5 15.5 8.5 10.5 2 17"></polyline>
-                                <polyline points="16 7 22 7 22 13"></polyline>
-                            </svg>
                             <div class="stat-content">
                                 <div class="stat-label">日均工时</div>
                                 <div class="stat-value">9小时12分钟</div>
                             </div>
                         </div>
                         <div class="stat-item workdays">
-                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#7c3aed"
-                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M8 2v4"></path>
-                                <path d="M16 2v4"></path>
-                                <rect width="18" height="18" x="3" y="4" rx="2"></rect>
-                                <path d="M3 10h18"></path>
-                            </svg>
                             <div class="stat-content">
                                 <div class="stat-label">工作天数</div>
                                 <div class="stat-value">1天</div>
@@ -633,33 +628,16 @@
                 <div class="period-stats">
                     <div class="period-item">
                         <div class="period-header">
-                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#2563eb"
-                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M8 2v4"></path>
-                                <path d="M16 2v4"></path>
-                                <rect width="18" height="18" x="3" y="4" rx="2"></rect>
-                                <path d="M3 10h18"></path>
-                            </svg>
                             <span class="period-date">2025-07-27 至 2025-08-02</span>
                         </div>
                         <div class="period-content">
                             <div class="period-stat weekly">
-                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#1d4ed8"
-                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                    <circle cx="12" cy="12" r="10"></circle>
-                                    <polyline points="12 6 12 12 16 14"></polyline>
-                                </svg>
                                 <div class="period-info">
                                     <div class="period-label">周累计工时</div>
                                     <div class="period-value">9小时12分钟</div>
                                 </div>
                             </div>
                             <div class="period-stat daily-avg">
-                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#16a34a"
-                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                    <polyline points="22 7 13.5 15.5 8.5 10.5 2 17"></polyline>
-                                    <polyline points="16 7 22 7 22 13"></polyline>
-                                </svg>
                                 <div class="period-info">
                                     <div class="period-label">日均工时</div>
                                     <div class="period-value">9小时12分钟</div>
@@ -675,65 +653,40 @@
                         <div class="record-header">
                             <h3 class="record-date">2025-08-01</h3>
                             <div class="record-duration-badge">
-                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#16a34a"
-                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                    <circle cx="12" cy="12" r="10"></circle>
-                                    <polyline points="12 6 12 12 16 14"></polyline>
-                                </svg>
                                 <span>9小时12分钟</span>
                             </div>
                         </div>
                         <div class="record-details">
                             <div class="record-time-info">
-                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#6b7280"
-                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                    <circle cx="12" cy="12" r="10"></circle>
-                                    <polyline points="12 6 12 12 16 14"></polyline>
-                                </svg>
                                 <span class="time-range">09:56 - 19:08</span>
                                 <span class="time-duration">(9小时12分钟)</span>
                             </div>
-                            <div class="record-actions">
-                                <button class="btn-edit" title="编辑记录">
-                                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#2563eb"
-                                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                        <path d="M17 3a2.85 2.83 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5Z"></path>
-                                        <path d="m15 5 4 4"></path>
-                                    </svg>
-                                </button>
-                                <button class="btn-delete" title="删除记录">
-                                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#dc2626"
-                                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                        <path d="M3 6h18"></path>
-                                        <path d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"></path>
-                                        <path d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"></path>
-                                        <line x1="10" x2="10" y1="11" y2="17"></line>
-                                        <line x1="14" x2="14" y1="11" y2="17"></line>
-                                    </svg>
-                                </button>
-                            </div>
+                            <div class="record-actions"></div>
+                            <button class="btn-edit" title="编辑记录">编辑</button>
+                            <button class="btn-delete" title="删除记录">删除</button>
                         </div>
                     </div>
                 </div>
-            </section>
+    </div>
+    </section>
 
-            <!-- 数据管理 -->
-            <section class="data-actions">
-                <div class="action-grid">
-                    <button class="action-btn export">
-                        <span class="action-text">导出数据</span>
-                    </button>
-                    <button class="action-btn backup">
-                        <span class="action-text">创建备份</span>
-                    </button>
-                </div>
-            </section>
-        </main>
+    <!-- 数据管理 -->
+    <section class="data-actions">
+        <div class="action-grid">
+            <button class="action-btn export">
+                <span class="action-text">导出数据</span>
+            </button>
+            <button class="action-btn backup">
+                <span class="action-text">创建备份</span>
+            </button>
+        </div>
+    </section>
+    </main>
 
-        <!-- 底部提示 -->
-        <footer class="footer">
-            <div class="tip-text">所有数据仅保存在本机，请定期导出备份</div>
-        </footer>
+    <!-- 底部提示 -->
+    <footer class="footer">
+        <div class="tip-text">所有数据仅保存在本机，请定期导出备份</div>
+    </footer>
     </div>
 </body>
 
@@ -811,23 +764,30 @@ gap: 8px;
 }
 
 .btn-edit, .btn-delete {
-background: none;
-border: none;
-padding: 8px;
-border-radius: 4px;
+background: var(--surface-hover);
+border: 1px solid var(--border);
+padding: 6px 12px;
+border-radius: var(--radius-sm);
 cursor: pointer;
 transition: var(--transition);
 display: flex;
 align-items: center;
 justify-content: center;
+font-size: 12px;
+font-weight: 500;
+color: var(--text);
 }
 
 .btn-edit:hover {
-background: #eff6ff;
+background: var(--primary);
+color: white;
+border-color: var(--primary);
 }
 
 .btn-delete:hover {
-background: #fef2f2;
+background: var(--danger);
+color: white;
+border-color: var(--danger);
 }
 
 /* 响应式设计 */
