--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,11 @@
 </head>
 <body>
     <div id="app">
-        <!-- 页面标题 -->
-        <header class="header">
-            <h1 class="title" id="pageTitle">工时卫士</h1>
-        </header>
+        <!-- 页面标题 - 简洁版本 -->
+        <div class="page-header">
+            <h1 class="page-title" id="pageTitle">工时卫士</h1>
+            <p class="page-subtitle">简洁高效的工时记录工具</p>
+        </div>
 
         <!-- 主要内容区域 -->
         <main class="main-content">
@@ -113,14 +114,12 @@
                         </div>
                         <div class="period-content">
                             <div class="period-stat">
-                                <div class="period-icon">🕐</div>
                                 <div class="period-info">
                                     <div class="period-label">周累计工时</div>
                                     <div class="period-value" id="weekTotalHours">9小时12分钟</div>
                                 </div>
                             </div>
                             <div class="period-stat">
-                                <div class="period-icon">📊</div>
                                 <div class="period-info">
                                     <div class="period-label">日均工时</div>
                                     <div class="period-value" id="weekAvgHours">9小时12分钟</div>
