--- a/design-preview.html
+++ b/design-preview.html
@@ -421,9 +421,11 @@
         }
 
         .action-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+            display: flex;
+            justify-content: center;
+            align-items: center;
             gap: 12px;
+            flex-wrap: wrap;
         }
 
         .action-btn {
@@ -650,20 +652,36 @@
                 <!-- 每日记录 -->
                 <div class="daily-records">
                     <div class="daily-record">
-                        <div class="record-header">
-                            <h3 class="record-date">2025-08-01</h3>
-                            <div class="record-duration-badge">
-                                <span>9小时12分钟</span>
+                        <div class="record-row">
+                            <div class="record-date">08-14</div>
+                            <div class="record-time-range">23:33 - 00:08</div>
+                            <div class="record-duration">9小时35分钟</div>
+                            <div class="record-actions">
+                                <button class="record-action-btn edit-btn" title="编辑">✏️</button>
+                                <button class="record-action-btn delete-btn" title="删除">🗑️</button>
                             </div>
                         </div>
-                        <div class="record-details">
-                            <div class="record-time-info">
-                                <span class="time-range">09:56 - 19:08</span>
-                                <span class="time-duration">(9小时12分钟)</span>
+                    </div>
+                    <div class="daily-record">
+                        <div class="record-row">
+                            <div class="record-date">08-13</div>
+                            <div class="record-time-range">08:02 - 09:02</div>
+                            <div class="record-duration">9小时0分钟</div>
+                            <div class="record-actions">
+                                <button class="record-action-btn edit-btn" title="编辑">✏️</button>
+                                <button class="record-action-btn delete-btn" title="删除">🗑️</button>
                             </div>
-                            <div class="record-actions"></div>
-                            <button class="btn-edit" title="编辑记录">编辑</button>
-                            <button class="btn-delete" title="删除记录">删除</button>
+                        </div>
+                    </div>
+                    <div class="daily-record">
+                        <div class="record-row">
+                            <div class="record-date">08-12</div>
+                            <div class="record-time-range">08:26 - 09:35</div>
+                            <div class="record-duration">9小时9分钟</div>
+                            <div class="record-actions">
+                                <button class="record-action-btn edit-btn" title="编辑">✏️</button>
+                                <button class="record-action-btn delete-btn" title="删除">🗑️</button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -675,9 +693,6 @@
         <div class="action-grid">
             <button class="action-btn export">
                 <span class="action-text">导出数据</span>
-            </button>
-            <button class="action-btn backup">
-                <span class="action-text">创建备份</span>
             </button>
         </div>
     </section>
@@ -693,101 +708,92 @@
 </html>
 /* 每日记录 */
 .daily-records {
-display: flex;
-flex-direction: column;
-gap: 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
 }
 
 .daily-record {
-background: white;
-border-radius: 8px;
-padding: 16px;
-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-border: 1px solid #e5e7eb;
-transition: var(--transition);
+    background: white;
+    border-radius: 8px;
+    border: 1px solid #e5e7eb;
+    transition: var(--transition);
 }
 
 .daily-record:hover {
-box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+    background: #f9fafb;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
 }
 
-.record-header {
-display: flex;
-justify-content: space-between;
-align-items: center;
-margin-bottom: 12px;
+.record-row {
+    display: flex;
+    align-items: center;
+    padding: 12px 16px;
+    gap: 12px;
 }
 
 .record-date {
-font-size: 18px;
-font-weight: 600;
-color: var(--text);
-margin: 0;
+    flex: 0 0 50px;
+    font-size: 14px;
+    font-weight: 500;
+    color: var(--text);
 }
 
-.record-duration-badge {
-display: flex;
-align-items: center;
-gap: 8px;
-color: #16a34a;
-font-weight: 500;
+.record-time-range {
+    flex: 0 0 140px;
+    font-size: 14px;
+    font-weight: 500;
+    color: var(--primary);
+    font-family: ui-monospace, 'SF Mono', 'Monaco', 'Cascadia Code', monospace;
+    text-align: left;
 }
 
-.record-details {
-display: flex;
-justify-content: space-between;
-align-items: center;
-padding-top: 12px;
-border-top: 1px solid #f3f4f6;
-}
-
-.record-time-info {
-display: flex;
-align-items: center;
-gap: 8px;
-color: #6b7280;
-font-size: 14px;
-}
-
-.time-range {
-font-weight: 500;
-font-family: ui-monospace, 'SF Mono', 'Monaco', 'Cascadia Code', monospace;
-}
-
-.time-duration {
-color: #9ca3af;
+.record-duration {
+    flex: 1;
+    font-size: 12px;
+    font-weight: 500;
+    color: #16a34a;
+    text-align: left;
+    white-space: nowrap;
 }
 
 .record-actions {
-display: flex;
-gap: 8px;
+    flex: 0 0 auto;
+    display: flex;
+    gap: 8px;
 }
 
-.btn-edit, .btn-delete {
-background: var(--surface-hover);
-border: 1px solid var(--border);
-padding: 6px 12px;
-border-radius: var(--radius-sm);
-cursor: pointer;
-transition: var(--transition);
-display: flex;
-align-items: center;
-justify-content: center;
-font-size: 12px;
-font-weight: 500;
-color: var(--text);
+.record-action-btn {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    border: none;
+    cursor: pointer;
+    transition: var(--transition);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
 }
 
-.btn-edit:hover {
-background: var(--primary);
-color: white;
-border-color: var(--primary);
+.record-action-btn.edit-btn {
+    background: rgba(74, 144, 226, 0.1);
+    color: var(--primary);
 }
 
-.btn-delete:hover {
-background: var(--danger);
-color: white;
-border-color: var(--danger);
+.record-action-btn.edit-btn:hover {
+    background: rgba(74, 144, 226, 0.2);
+    transform: scale(1.1);
+}
+
+.record-action-btn.delete-btn {
+    background: rgba(208, 2, 27, 0.1);
+    color: var(--danger);
+}
+
+.record-action-btn.delete-btn:hover {
+    background: rgba(208, 2, 27, 0.2);
+    transform: scale(1.1);
 }
 
 /* 响应式设计 */
