--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-i18n="app.title">工时卫士 - Hours Guard</title>
+    <!-- Hook测试注释 -->
     <meta name="description" content="简单易用的工时记录工具，帮助您轻松管理工作时间" data-i18n-meta="app.description">
     <meta name="keywords" content="工时记录,时间管理,打卡,考勤">
     
